# stock-marker-service

./: .env.local  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
stock_api/stock_api/: asgi.py  settings.py  urls.py  wsgi.py
stock_market_info/: apps.py  test.py  throttle_rate.py  views.py
stock_market_info/middleware/: log_api_call.py
users/: admin.py  auth_backend.py  authentication.py  managers.py  models.py  serializers.py  test.py  urls.py  views.py
users/migrations/: 0001_initial.py
